<component name="ProjectRunConfigurationManager">
  <configuration default="false" name="BUILD" type="Application" factoryName="Application">
    <option name="ALTERNATIVE_JRE_PATH" value="temurin-1.8" />
    <option name="ALTERNATIVE_JRE_PATH_ENABLED" value="true" />
    <option name="MAIN_CLASS_NAME" value="cn.yapeteam.builder.Builder" />
    <module name="Builder" />
    <option name="PROGRAM_PARAMETERS" value="--add-exports java.base/sun.util.logging=ALL-UNNAMED " />
    <method v="2">
      <option name="MakeProject" enabled="true" />
    </method>
  </configuration>
</component>